Fix alignment of progress bars

--- a/client/src/components/PlayNow/PlayNow.scss
+++ b/client/src/components/PlayNow/PlayNow.scss
@@ -75,9 +75,10 @@
   width: 30%;
   .progress {
     @include Progress-bar;
-    height: 1.5rem;
+    height: 1.7rem;
     width: 100%;
-    margin-bottom: 1rem;
+    margin-top: 0.5rem;
+    margin-bottom: 0.2rem;
   }
 }
 
